--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,7 @@ sidebar .content-form #button {
   height: 50px;
   align-items: center;
   text-align: center;
+  border: none;
 }
 
 sidebar .most-popular button {
@@ -165,4 +166,5 @@ sidebar .most-popular button {
   font-weight: 500;
   text-align: center;
   align-items: center;
+  border: none;
 }
