--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "DM Sans", sans-serif;
   /* Margin não, padding e coloca apenas acima e abaixo, não dos lados pois tu tem que centralizar o main e não centralizar com bordas */
-  margin: 90px 115px 140px 115px;
+  padding: 90px 0px 140px 0px;
   background-color: #fff;
 }
 
@@ -9,13 +9,14 @@ body {
   /* centralizar a div, referindo ao comentario acima. */
   max-width: 1178px;
   display: flex;
+  margin: 0 auto;
 }
 
 #content {
   width: 700px;
 }
 
-#content h3 {
+.content-header h1 {
   color: #1e0e62;
   font-size: 42px;
   line-height: 52px;
@@ -25,7 +26,7 @@ body {
 }
 
 /* Aqui algo que comentei la no html sobre o id label. */
-#main #label {
+#main .label {
   text-transform: uppercase;
   margin-bottom: 30px;
   font-weight: 700;
@@ -34,7 +35,7 @@ body {
   color: rgba(21, 20, 57, 0.4);
 }
 
-#content article {
+#content .content-header article {
   font-size: 18px;
   line-height: 28px;
   font-weight: 500;
@@ -42,7 +43,7 @@ body {
   margin-bottom: 35px;
 }
 
-#content h5 {
+#content .content-body h5 {
   color: #1e0e62;
   font-size: 22px;
   line-height: 32px;
@@ -50,18 +51,18 @@ body {
   margin-bottom: 12px;
 }
 
-#content p {
+#content .content-body p {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
   color: rgba(21, 20, 57, 0.4);
 }
 
-#content .photo-content p {
+#content .content-body .content-photo p {
   margin-bottom: 30px;
 }
 
-#content .photo-content img {
+#content .content-body .content-photo-img {
   margin-top: 50px;
   margin-bottom: 25px;
 }
@@ -72,24 +73,33 @@ sidebar {
 }
 
 /* Aqui algo que comentei la no html sobre o id label. */
-sidebar #label {
+sidebar .label {
   margin-bottom: 20px;
 }
 
 sidebar .list {
-  display: flex;
-  margin-bottom: 30px;
   width: 370px;
+}
+
+sidebar .list-item {
+  margin-bottom: 30px;
   height: 110px;
 }
 
-sidebar .last-seen img {
+sidebar .list-item-link {
+  display: flex;
+}
+
+sidebar .list-item-img {
   width: 170px;
-  height: 105px;
+}
+
+sidebar .list-item-text {
+  flex: 1;
+  margin-left: 20px;
 }
 
 sidebar .list p {
-  margin-left: 20px;
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
@@ -101,7 +111,7 @@ sidebar .list p:last-child {
   margin-top: 4px;
 }
 
-sidebar .newsletter {
+sidebar #newsletter {
   width: 370px;
   height: 186px;
   border: 2px solid #ebeaed;
@@ -112,14 +122,14 @@ sidebar .newsletter {
 }
 
 /* Aqui algo que comentei la no html sobre o article. */
-sidebar .newsletter article {
+sidebar #newsletter h2 {
   font-size: 18px;
   line-height: 28px;
   font-weight: 500;
   color: #1e0e62;
 }
 
-sidebar .content-form legend {
+sidebar #newsletter .content-form legend {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
@@ -127,12 +137,12 @@ sidebar .content-form legend {
   margin-bottom: 20px;
 }
 
-sidebar .content-form {
+sidebar #newsletter .content-form {
   display: flex;
 }
 
 /* Aqui algo que comentei la no html sobre o id. */
-sidebar .content-form #email {
+sidebar #newsletter .content-form #email-newsletter {
   font-size: 18px;
   line-height: 28px;
   font-weight: 500;
@@ -146,7 +156,7 @@ sidebar .content-form #email {
 }
 
 /* Aqui algo que comentei la no html sobre o id, sobre o hover e o cursor pointer. */
-sidebar .content-form #button {
+sidebar #newsletter .content-form #btn-newsletter {
   border-radius: 100px;
   background-color: #25dac5;
   color: #fff;
@@ -161,10 +171,14 @@ sidebar .content-form #button {
   border: none;
 }
 
-/* Aqui algo que comentei la no html sobre o hover e o cursor pointer. */
-sidebar .most-popular button {
-  color: #fff;
+sidebar #newsletter .content-form #btn-newsletter:hover {
   background-color: #e93a7d;
+}
+
+/* Aqui algo que comentei la no html sobre o hover e o cursor pointer. */
+sidebar #most-popular button {
+  color: #fff;
+  background-color: #25dac5;
   border-radius: 100px;
   padding: 5px;
   width: 130px;
@@ -175,4 +189,9 @@ sidebar .most-popular button {
   text-align: center;
   align-items: center;
   border: none;
+  cursor: pointer;
+}
+
+sidebar #most-popular button:hover {
+  background-color: #e93a7d;
 }
