--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 body {
   font-family: "DM Sans", sans-serif;
   background-color: #fff;
-  margin: 0 auto;
 }
 
 .introduction {
@@ -11,7 +10,9 @@ body {
 }
 
 .content-introduction {
-  padding: 100px 315px 96px 315px;
+  padding: 100px 0 96px;
+  max-width: 770px;
+  margin: 0 auto;
 }
 
 .content-introduction h1 {
@@ -32,7 +33,7 @@ body {
   color: #fff;
 }
 
-.content-introductiono p {
+.content-introduction p {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
@@ -50,11 +51,4 @@ body {
   height: 100px;
   border-radius: 50px;
   margin-right: 25px;
-  flex: 1;
-}
-
-.content-user-description {
-  text-align: left;
-
-  margin-right: 382px;
 }
