--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,19 +3,19 @@ body {
   background-color: #fff;
 }
 
-.introduction {
+.header {
   width: 100%;
   height: 643px;
   background-color: #1e0e62;
 }
 
-.content-introduction {
+.header-content {
   padding: 100px 0 96px;
   max-width: 770px;
   margin: 0 auto;
 }
 
-.content-introduction h1 {
+.header-content h1 {
   font-size: 58px;
   line-height: 70px;
   font-weight: 700;
@@ -24,7 +24,7 @@ body {
   color: #fff;
 }
 
-.content-introduction h3 {
+.header-content h3 {
   font-size: 14px;
   line-height: 26px;
   font-weight: 700;
@@ -33,7 +33,7 @@ body {
   color: #fff;
 }
 
-.content-introduction p {
+.header-content p {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
@@ -80,4 +80,45 @@ body {
   font-size: 16px;
   line-height: 26px;
   font-weight: 400;
+}
+
+#main h4 {
+  margin-bottom: 15px;
+  color: #1e0e62;
+  font-size: 22px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-top: 40px;
+}
+
+#main #legend {
+  color: rgba (21, 20, 57, 0.4);
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+#main .content-img {
+  padding: 20px 0;
+}
+
+#main .list-content-final li {
+  display: flex;
+  align-items: center;
+}
+
+#main .list-content-final i {
+  margin-right: 18px;
+  font-size: 16px;
+  line-height: 16px;
+  color: #1e0e62;
+}
+
+#main .list-content-final li p {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 28px;
+  color: #1e0e62;
 }
